# ArchettoBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yml  setup.sh
crates/bot-core/: Cargo.toml
crates/bot-core/migrations/: 20240101000000_initial_schema.sql
crates/bot-core/src/: card_gen.rs  card_template.rs  config.rs  db.rs  error.rs  handler.rs  main.rs  schedule.rs  scheduler.rs  util.rs
crates/bot-core/src/command/: admin.rs  bilibili.rs  competition.rs  func_scope.rs  mod.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: bilibili.rs  bilibili_video.rs  error.rs  lib.rs  models.rs
crates/crawler/src/platform/: atcoder.rs  codeforces.rs  leetcode.rs  luogu.rs  mod.rs  nowcoder.rs  time_util.rs
crates/napcat-sdk/: Cargo.toml
crates/napcat-sdk/src/: action.rs  client.rs  error.rs  event.rs  lib.rs  message.rs  model.rs
crawler_server/: converter.py  get_bilibili_info.py  get_competition.py  main.py  requirements.txt
main_server/: Cargo.toml
main_server/src/: handler.rs  main.rs  models.rs  router.rs  state.rs
main_server/src/utils/: cq_models.rs  cqhttp.rs  crawler_models.rs  http_services.rs  reporter_models.rs  scheduled_task_models.rs  scheduled_task_services.rs
