[workspace]
resolver = "2"
members = ["crates/napcat-sdk", "crates/crawler", "crates/bot-core"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dashmap = "6"
