[package]
name = "napcat-sdk"
version = "0.1.0"
edition = "2021"
description = "NapCat OneBot 11 WebSocket SDK"

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "net", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
url = "2"
uuid = { version = "1", features = ["v4"] }
